--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <section class="card">
       <div class="pad">
         <h1>Mount Shiv <span aria-hidden="true">❤️</span></h1>
-        <p class="sub">Click the green flags. Avoid the red ones. First to 10 wins a surprise.</p>
+        <p class="sub">Click the green hearts and avoid the red flags!.</p>
 
         <div class="hud">
           <div class="stat" style="position:relative;">
