Revise game instructions in index.html
Updated game instructions for clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
         <p class="big">How to play</p>
         <ul class="list">
           <li><span class="badge">1</span><div>Tap the <b>💚</b> hearts as they fall.</div></li>
-          <li><span class="badge">2</span><div>Avoid the <b>🚩</b> flags (they’re not you 😭).</div></li>
-          <li><span class="badge">3</span><div>Get to <b>10</b> to unlock the surprise.</div></li>
+          <li><span class="badge">2</span><div>Avoid the <b>🚩</b> flags.</div></li>
+          <li><span class="badge">3</span><div>Get to <b>10</b> to win the game!</div></li>
         </ul>
 
         <p class="note">
