--- a/index.html
+++ b/index.html
@@ -403,8 +403,7 @@
   <div class="overlay" id="overlay" aria-hidden="true">
     <div class="modal" role="dialog" aria-modal="true" aria-labelledby="askTitle">
       <div style="font-size:40px; line-height:1;">💌💞</div>
-      <h2 id="askTitle">Shivani… will you be my Valentine? ❤️</h2>
-      <p>I’ll bring the Philz. You bring the “I’m just a baby” voice 🥹</p>
+      <h2 id="askTitle">Now that you have described me fully, will you be my valentine? ❤️</h2>
       <div class="btns">
         <button class="primary" id="yesBtn" type="button">Yes ❤️</button>
         <button class="ghost" id="obvBtn" type="button">Obviously 🙄❤️</button>
