Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     <section class="card">
       <div class="pad">
         <h1>Mount Shiv <span aria-hidden="true">❤️</span></h1>
-        <p class="sub">Click the green hearts and avoid the red flags!.</p>
+        <p class="sub">Click the green hearts and avoid the red flags!</p>
 
         <div class="hud">
           <div class="stat" style="position:relative;">
